# playground

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  base.cmake
cmake/: base.cmake
common/: CMakeLists.txt  memory.hpp  scopeguard.hpp  scopeguard_test.cc
distance/: CMakeLists.txt  distance.hpp  distance_bench.cc  distance_test.cc
exercises/: CMakeLists.txt  concurrent_cache.cc  concurrent_lru_cache_parallel.hpp  concurrent_lru_cache_serialized.hpp  generated.json  generator.cc  generator.hpp  generator_test.cc  hardware_concurrency.cc  hardware_interference_size.cc  lru_cache.cc  lru_cache.hpp  lru_cache_bench.cc  lru_cache_test.cc  simdjson_print.cc  stream_redirect.cc  stream_redirect.hpp  word_frequencies.cc  word_frequencies.py
objectstore/: CMakeLists.txt  objectstore.cc  objectstore.hpp  objectstore_test.cc
