CMAKE_MINIMUM_REQUIRED(VERSION 4.0.0)

PROJECT(Playground)

INCLUDE(CTest)

ADD_SUBDIRECTORY(common ${CMAKE_CURRENT_BINARY_DIR}/common)
ADD_SUBDIRECTORY(distance ${CMAKE_CURRENT_BINARY_DIR}/distance)
ADD_SUBDIRECTORY(objectstore ${CMAKE_CURRENT_BINARY_DIR}/objectstore)
ADD_SUBDIRECTORY(exercises ${CMAKE_CURRENT_BINARY_DIR}/exercises)
